--- a/app.env
+++ b/app.env
@@ -1,6 +1,6 @@
 ENVIRONMENT=development
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:secret@localhost:5454/gym_shark_db?sslmode=disable
+DB_SOURCE=postgresql://root:secret@postgres:5432/gym_shark_db?sslmode=disable
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
