--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
           which migrate
 
       - name: Run migrations
-        run: make migrate_up
+        run: make migrate_up_for_ci
 
       - name: Test
         run: make test
